--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         </hgroup>
                     	<p>
                         	Desde aquí puedes dirigirte a distintas páginas.
+                        	<img alt="¡Te deseo feliz Año Nuevo! | I wish you a Happy New Year!" border="0" height="180" src="https://www.google.es/logos/doodles/2014/new-years-eve-2014-5699412953137152.2-hp.gif" style="padding-top:27px" title="¡Te deseo feliz Año Nuevo! | I wish you a Happy New Year!" width="427" onload="window.lol&amp;&amp;lol()">
                         </p>
                     </article>
                 </div>
