--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
     	<meta charset="utf-8">
-        <title>Página de raulsmail|Inicio</title>
+        <title>raulsmail's WebPage | Página de raulsmail</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link href='http://fonts.googleapis.com/css?family=Patrick+Hand+SC' rel='stylesheet'>
         <link href='http://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet'>
@@ -14,11 +14,11 @@
     	<div id="contenido">
         	<header>
                 <hgroup>
-                    <h1>Página de raulsmail</h1>
+                    <h1>Página de raulsmail | raulsmail's WebPage</h1>
                 </hgroup>
                 <nav>
             		<ul>
-                		<li><a href="index.html">Inicio</a></li>
+                		<li><a href="index.html">Inicio | Home</a></li>
                 	</ul>
             	</nav>
             </header>
