Update & create files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>raulsmail's Web - Home</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet/index.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet/index1.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet/index2.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet/index3.css">
 </head>
 <body>
 <header>
@@ -11,12 +13,12 @@
 <div class="pageContent noBorderRadiusBottom noBorderRadius">
 <div class="spigot_colorOverlay">
 <div class="pageWidth">
-<div id="logo"><a href="http://www.spigotmc.org/">
+<div id="logo"><a href="http://raulsmail.github.io/">
 <span></span>
-<img src="//static.spigotmc.org/img/spigot.png" alt="SpigotMC - High Performance Minecraft">
+<img src="http://raulsmail.github.io/img/spigot.png" alt="raulsmail's Web - Home">
 </a></div>
 <div class="spigot_headerReadAboutWrapper">
-<p>Want a faster Minecraft server? <br> Read about Spigot <a href="http://www.spigotmc.org/wiki/about-spigot/">here</a>!</p>
+<p>Want a Spigot or Bukkit plugin? <br> Read about me <a href="http://raulsmail.github.io/about.html">here</a>!</p>
 </div>
 <span class="helper"></span>
 </div>
@@ -99,62 +101,7 @@
 
 </li>
  
-</ul>
-<ul class="left uix_offCanvasSidebarMenu">
-<li class="navTab uix_offCanvasSidebarTrigger PopupClosed" id="uix_paneTrigger"><a class="navLink left-off-canvas-trigger" href="#"><i class="uix_icon uix_icon-navTrigger"></i> Menu</a></li>
-</ul>
-<ul class="visitorTabs right">
-<li class="navTab uix_searchTab">
-<div id="searchBar" class="hasSearchButton">
-<i id="QuickSearchPlaceholder" class="uix_icon uix_icon-search" title="Search"></i>
-<fieldset id="QuickSearch">
-<form action="search/search" method="post" class="formPopup">
-<div class="primaryControls">
- 
-<i class="uix_icon uix_icon-search"></i>
-<input type="search" name="keywords" value="" class="textCtrl" placeholder="Search..." results="0" title="Enter your search and hit enter" id="QuickSearchQuery">
- 
-</div>
-<div class="secondaryControls">
-<div class="controlsWrapper">
- 
-<dl class="ctrlUnit">
-<dt></dt>
-<dd><ul>
-<li><label><input type="checkbox" name="title_only" value="1" id="search_bar_title_only" class="AutoChecker" data-uncheck="#search_bar_thread"> Search titles only</label></li>
-</ul></dd>
-</dl>
-<dl class="ctrlUnit">
-<dt><label for="searchBar_users">Posted by Member:</label></dt>
-<dd>
-<input type="text" name="users" value="" class="textCtrl AutoComplete" id="searchBar_users" autocomplete="off">
-<p class="explain">Separate names with a comma.</p>
-</dd>
-</dl>
-<dl class="ctrlUnit">
-<dt><label for="searchBar_date">Newer Than:</label></dt>
-<dd><input type="text" data-orig-type="date" name="date" value="" class="textCtrl date" id="searchBar_date"></dd>
-</dl>
-</div>
- 
-<dl class="ctrlUnit submitUnit">
-<dt></dt>
-<dd>
-<input type="submit" value="Search" class="button primary Tooltip">
-<a href="search/" class="button moreOptions Tooltip">More...</a>
-<div class="Popup" id="commonSearches">
-<a rel="Menu" class="button NoPopupGadget Tooltip PopupControl" data-tipclass="flipped"><span class="arrowWidget"></span></a>
 
-</div>
-</dd>
-</dl>
-</div>
-<input type="hidden" name="_xfToken" value="">
-</form>
-</fieldset>
-</div>
-</li>
-</ul>
 </div>
 </div>
 <span class="helper"></span>
