#Update index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <br>
                 <div class="panel-footer">
                     <div class="pull-right">
-                        <a class="btn btn-primary btn-sm" href="https://github.com/raulsmail">Visit</a>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/raulsmail">Visit Github Account</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -71,13 +71,13 @@
         </div>
         <div class="col-lg-4">
             <div class="panel panel-default">
-                <div class="panel-heading">My Minecraft Server</div>
+                <div class="panel-heading">HubEssentials Plugin</div>
                 <div class="panel-body">
-                    NeoCrafters is a Minecraft server, that has been running 24/7 ever, please take a visit and enjoy.
+                    Currently working on HubEssentials to implement gadgets, pets, treasure chets and more.
                 </div>
                 <div class="panel-footer">
                     <div class="pull-right">
-                        <a class="btn btn-primary btn-sm" href="https://neocrafters.es">Visit</a>
+                        <a class="btn btn-primary btn-sm" href="https://www.spigotmc.org/resources/hubessentials.1703/">Visit Plugin's Spigot</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
